<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:padding="@dimen/spacing_lg">

    <ImageView
        android:id="@+id/iv_lock_icon"
        android:layout_width="@dimen/icon_size_large"
        android:layout_height="@dimen/icon_size_large"
        android:layout_marginTop="@dimen/spacing_xl"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/app_locked"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_lock_icon" />

    <TextView
        android:id="@+id/tv_pin_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:text="••••" />

    <GridLayout
        android:id="@+id/grid_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintBottom_toTopOf="@+id/btn_use_biometric"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pin_display"
        app:layout_constraintVertical_bias="0.5">

        <!-- Row 1 -->
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/pin_button_size"
            android:layout_height="@dimen/pin_button_size"
            android:layout_margin="@dimen/spacing_sm"
            android:text="1"
            android:tag="1"
            android:contentDescription="@string/unlock"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/pin_button_size"
            android:layout_height="@dimen/pin_button_size"
            android:layout_margin="@dimen/spacing_sm"
            android:text="2"
            android:tag="2"
            android:contentDescription="@string/unlock"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/pin_button_size"
            android:layout_height="@dimen/pin_button_size"
            android:layout_margin="@dimen/spacing_sm"
            android:text="3"
            android:tag="3"
            android:contentDescription="@string/unlock"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <!-- Row 2 -->
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/pin_button_size"
            android:layout_height="@dimen/pin_button_size"
            android:layout_margin="@dimen/spacing_sm"
            android:text="4"
            android:tag="4"
            android:contentDescription="@string/unlock"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/pin_button_size"
            android:layout_height="@dimen/pin_button_size"
            android:layout_margin="@dimen/spacing_sm"
            android:text="5"
            android:tag="5"
            android:contentDescription="@string/unlock"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/pin_button_size"
            android:layout_height="@dimen/pin_button_size"
            android:layout_margin="@dimen/spacing_sm"
            android:text="6"
            android:tag="6"
            android:contentDescription="@string/unlock"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <!-- Row 3 -->
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/pin_button_size"
            android:layout_height="@dimen/pin_button_size"
            android:layout_margin="@dimen/spacing_sm"
            android:text="7"
            android:tag="7"
            android:contentDescription="@string/unlock"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/pin_button_size"
            android:layout_height="@dimen/pin_button_size"
            android:layout_margin="@dimen/spacing_sm"
            android:text="8"
            android:tag="8"
            android:contentDescription="@string/unlock"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/pin_button_size"
            android:layout_height="@dimen/pin_button_size"
            android:layout_margin="@dimen/spacing_sm"
            android:text="9"
            android:tag="9"
            android:contentDescription="@string/unlock"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <!-- Row 4 -->
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.IconButton"
            android:id="@+id/btn_delete"
            android:layout_width="@dimen/pin_button_size"
            android:layout_height="@dimen/pin_button_size"
            android:layout_margin="@dimen/spacing_sm"
            android:contentDescription="@string/delete"
            app:icon="@drawable/ic_delete"
            app:iconTint="?attr/colorOnSurface" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="@dimen/pin_button_size"
            android:layout_height="@dimen/pin_button_size"
            android:layout_margin="@dimen/spacing_sm"
            android:text="0"
            android:tag="0"
            android:contentDescription="@string/unlock"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button"
            android:id="@+id/btn_enter"
            android:layout_width="@dimen/pin_button_size"
            android:layout_height="@dimen/pin_button_size"
            android:layout_margin="@dimen/spacing_sm"
            android:contentDescription="@string/unlock"
            app:icon="@drawable/ic_arrow_right"
            app:iconTint="?attr/colorOnPrimary" />

    </GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_use_biometric"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginBottom="@dimen/spacing_lg"
        android:minHeight="@dimen/min_touch_target"
        android:text="@string/use_biometric"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grid_pin" />

</androidx.constraintlayout.widget.ConstraintLayout>
